fix header, tweak contrasts, make sidebar larger

--- a/assets/css/common/_measurements.scss
+++ b/assets/css/common/_measurements.scss
@@ -17,12 +17,13 @@ $font-family-monospace: "Droid Sans Mono", monospace;
   --navbar-size: 40px;
   --navbar-secondary-size: 36px;
   --navbar-avatar-size: 36px;
+  --navbar-input-size: 32px;
 
   --button-group-height: 2em;
   --button-group-tall-height: 2.5em;
   --button-group-small-height: 1.5em;
 
-  --column-left-width: 326px;
+  --column-left-width: 360px;
 
   --border-radius: 4px;
 
@@ -32,8 +33,8 @@ $font-family-monospace: "Droid Sans Mono", monospace;
   --media-medium-container-width: 250px;
   --media-large-container-width: 500px;
   --media-full-container-width: 100%;
-  --media-featured-width: 320px;
-  --media-header-height: 24px;
+  --media-featured-width: 358px;
+  --media-header-height: 22px;
 
   --font-family: #{$font-family-base};
   --font-family-monospace: #{$font-family-monospace};
@@ -55,5 +56,5 @@ $font-family-monospace: "Droid Sans Mono", monospace;
   --medium-layout-width: #{$medium-layout-width};
   --narrow-layout-width: #{$narrow-layout-width};
 
-  --transition-animation-duration: 0.25s;
+  --transition-animation-duration: 0.2s;
 }
