--- a/assets/css/elements/_button.scss
+++ b/assets/css/elements/_button.scss
@@ -43,6 +43,7 @@
   &:hover {
     @include animated-transition;
     background: var(--primary-dark-color);
+    cursor: pointer;
   }
 }
 
