--- a/assets/css/themes/dark-blue.scss
+++ b/assets/css/themes/dark-blue.scss
@@ -37,20 +37,20 @@ $spoiler-color: #0f0f0f;
 
 @mixin type-color($type, $color) {
   --#{$type}-color: #{$color};
-  --#{$type}-border-color: #{lighten(desaturate($color, 5%), 30%)};
+  --#{$type}-border-color: #{lighten(desaturate($color, 5%), 25%)};
   --#{$type}-dark-color: #{darken($color, 15%)};
-  --#{$type}-link-color: #{lighten($color, 45%)};
+  --#{$type}-link-color: #{lighten(saturate($color, 10%), 45%)};
 }
 
 :root {
   --background-color: #{$background-color};
   --text-color: #{$text-color};
 
-  --link-color: #{lighten(saturate($primary-color, 7%), 30%)};
+  --link-color: #{lighten(saturate($primary-color, 7%), 35%)};
   --link-hover-color: #{$text-color};
 
   --primary-color: #{$primary-color};
-  --primary-border-color: #{lighten($primary-color, 20%)};
+  --primary-border-color: #{lighten(desaturate($primary-color, 20%), 17%)};
   --primary-muted-color: #{darken(desaturate($primary-color, 10%), 10%)};
   --primary-dark-color: #{darken(desaturate($primary-color, 5%), 15%)};
 
