--- a/assets/css/views/_header.scss
+++ b/assets/css/views/_header.scss
@@ -47,3 +47,48 @@
 .header__link--no-hover:hover {
   background: 0 !important;
 }
+
+.header__input {
+  @include animated-transition;
+  height: var(--navbar-input-size);
+  background: var(--primary-muted-color);
+  font-size: var(--font-size);
+  border: 0;
+}
+
+select.header__input {
+  cursor: pointer;
+}
+
+select.header__input:hover {
+  @include animated-transition;
+  background: var(--primary-dark-color) !important;
+}
+
+.header__search {
+  @extend .flex__row;
+  height: var(--navbar-size);
+  padding: 0 var(--padding-small);
+  border-right: 1px solid var(--primary-border-color);
+  border-left: 1px solid var(--primary-dark-color);
+}
+
+.header__buttons {
+  border: 0;
+  border-radius: 0;
+  border-left: 1px solid var(--primary-dark-color);
+}
+
+.header__search__button {
+  height: var(--navbar-input-size);
+  background: var(--primary-muted-color);
+  box-shadow: 0 -1px var(--secondary-dark-color) inset;
+}
+
+.header__search__button:hover {
+  background: var(--primary-dark-color) !important;
+}
+
+.header__filter-form {
+  padding: 0 var(--padding-small);
+}
